# virtual-intelligence-core

./: .gitignore  README.md  StartServer.bat  StartServer_Win.bat  cli.py  conf.yaml  main.py  pyproject.toml
core_module/: __main__.py
core_module/agent/: agent_factory.py  agent_interface.py  prompt.txt  prompt_forger.py
core_module/asr/: asr_adapter_nls.py  asr_factory.py
core_module/link_session/: LS_Rule.md  LinkSession.py  link_session.py  link_session_manager.py
core_module/llm/: llm_adapter_deepseek.py  llm_adapter_qfan.py  llm_adapter_qwen.py  llm_adapter_volcengine.py  llm_factory.py  llm_interface.py
core_module/mcp/: MCP_Rule.md  mcp_handler.py  mcp_manager.py
core_module/tts/: tts_adapter_nls.py  tts_factory.py
core_module/util/: cache_manager.py  config_librarian.py
core_module/ws/: websocket_manager.py
custom_cases/: Case_Rule.md  example_case.py  smart_json_case.py
mcp_servers/: mcp_simple.py
src/: __main__.py
src/asr/: asr_factory.py  asr_interface.py  nls_asr_adapter.py
src/cases/: Case_Rule.md
src/core_module/: __main__.py
src/llm/: deepseek_llm_adapter.py  llm_factory.py  llm_interface.py
src/tests/: agent_test.py  agent_test_cli.py  ai_interface_test.py  mcp_test.py  multiple_mcp_servers.py  ws_test.py
src/tools/: __main__.py  asr_hands_free.py  mcp_simple.py  show-tree.ps1  ws_control_basic.py  ws_control_msg.py
src/tts/: nls_tts_adapter.py  tts_factory.py
tests/: agent_test.py  ai_interface_test.py  mcp_test.py
tool_script/: mcp_simple.py  ws_audio_input_SR.py  ws_control_msg.py  ws_display.py
(+47 files in other folders)
