[project]
name = "virtual-intelligence-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "ffmpeg-python>=0.2.0",
    "openai>=1.82.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "soundfile>=0.13.1",
    "uvicorn>=0.34.2",
]
