[project]
name = "virtual-intelligence-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "ffmpeg-python>=0.2.0",
    "mcp>=1.9.3",
    "openai>=1.82.0",
    "pyaudio>=0.2.14",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "setuptools>=80.9.0",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.3",
    "uvicorn>=0.34.2",
    "webrtcvad>=2.0.10",
    "websockets>=15.0.1",
]
